Bug 488: Health Connect logo appears cropped on actual Android device

--- a/HealthConnect.Mobile/styles/main.css
+++ b/HealthConnect.Mobile/styles/main.css
@@ -1,17 +1,6 @@
 @import url('http://roboto-webfont.googlecode.com/svn/trunk/roboto.all.css');
 
 /* IMAGES */
-.logo-image {
-    background-image: url(../styles/images/logo.png);
-    background-position: 10px 10px;
-    background-repeat: no-repeat;
-    background-color:#011730;
-    height: 45px;
-    display: block;
-    margin: 0px auto;
-}
-
-
 .km-ios7 .km-list>li:last-child {
     box-shadow: inset 0 0 0 rgba(180,180,180,0.0) !important;
 -webkit-box-shadow: inset 0 0 0 rgba(180,180,180,0.0) !important;
